[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fontes/minecraftia/Minecraftia-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Control.gd" type="Script" id=2]
[ext_resource path="res://images/buttons/audioOn.png" type="Texture" id=3]
[ext_resource path="res://images/buttons/musicOn.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 108.0
margin_top = 69.0
margin_right = -9.0
margin_bottom = -19.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]

[node name="Label" type="Label" parent="Sprite"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 338.0
margin_top = 58.0
margin_right = 542.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 1 )
text = "CONFIGURAÇÕES"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Sprite"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 293.0
margin_top = 121.0
margin_right = 401.0
margin_bottom = 221.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="Sprite"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 484.0
margin_top = 125.0
margin_right = 595.0
margin_bottom = 230.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Sprite"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 381.0
margin_top = 240.0
margin_right = 482.0
margin_bottom = 264.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Sprite"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 363.0
margin_top = 284.0
margin_right = 508.0
margin_bottom = 311.0

[node name="Label2" type="Label" parent="Sprite"]
modulate = Color( 0.156863, 0.203922, 0.356863, 1 )
anchor_right = 0.128
margin_left = 399.0
margin_top = 241.0
margin_right = 464.872
margin_bottom = 271.0
custom_fonts/font = SubResource( 2 )
text = "Salvar"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Sprite"]
modulate = Color( 0.156863, 0.203922, 0.356863, 1 )
anchor_right = 0.128
margin_left = 372.0
margin_top = 284.0
margin_right = 497.872
margin_bottom = 314.0
custom_fonts/font = SubResource( 2 )
text = "Salvar e sair"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Sprite/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Sprite/TextureButton2" to="." method="_on_TextureButton2_pressed"]
